pkg/lang/testdata/ub/config/valid/input-map-comprehension.ub
factory: {
  inputs: { m: { for n in [1, 2]: n => n } }
}
