pkg/lang/testdata/ub/config/invalid/pin-entry-value-not-string.ub
factory: { pin: { supported-versions: [{ version: 1, content-revision: 'abc' }] } }
